주찬 테이블git add .

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+  	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+   	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 tasks.named('bootBuildImage') {
